--- a/components/humberger/HamburgerMenu.module.css
+++ b/components/humberger/HamburgerMenu.module.css
@@ -1,84 +1,174 @@
-/* components/HamburgerMenu.module.css */
-.hamburgerMenu {
-  position: relative;
+.header__main-nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
 }
-
-.hamburger {
-  background: none;
-  border: none;
+.header__main-nav input {
+  position: absolute;
+  top: 3rem;
+  left: 3rem;
   cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  width: 30px;
-  height: 30px;
-  padding: 0;
-  box-sizing: border-box;
-  z-index: 10;
+  opacity: 0;
+  width: 5rem;
+  height: 5rem;
+  z-index: 3;
+}
+.header__main-nav--hamburger {
+  position: absolute;
+  top: 3rem;
+  left: 3rem;
+  width: 5rem;
+  height: 5rem;
+  padding: 1rem;
+  background-color: #f19204;
+  display: grid;
+  place-items: center;
+  z-index: 2;
+  animation: main-nav 2s;
+}
+
+@keyframes main-nav {
+  0% {
+    transform: translateX(150rem) rotate(1800deg);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateX(0) rotate(0);
+    opacity: 1;
+  }
+}
+
+.header__main-nav--hamburger > div {
+  background-color: white;
+  transition: all 0.3s ease-in-out;
+  height: 0.3rem;
+  width: 100%;
+  background-color: #fff;
   position: relative;
 }
 
-.hamburger .line {
-  width: 30px;
-  height: 3px;
-  background-color: #000;
-  border-radius: 5px;
-  transition: all 0.3s ease;
+.header__main-nav--hamburger > div::after,
+.header__main-nav--hamburger > div::before {
+  content: '';
+  top: -1rem;
+  position: absolute;
+  height: inherit;
+  width: 60%;
+  background-color: inherit;
+  z-index: 2;
 }
 
-.hamburger.open .line:nth-child(1) {
-  transform: rotate(45deg) translate(5px, 5px);
+.header__main-nav--hamburger > div::after {
+  top: 1rem;
+  right: 0;
+}
+.header__main-nav--hamburger > div::before {
+  left: 0;
 }
 
-.hamburger.open .line:nth-child(2) {
+.header__main-nav input:checked + .header__main-nav--hamburger > div {
+  transform: rotate(135deg);
+}
+
+.header__main-nav input:checked + .header__main-nav--hamburger > div::before {
+  left: 0;
+  top: 0;
+  width: 100%;
+  transform: rotate(270deg);
+}
+.header__main-nav input:checked + .header__main-nav--hamburger > div::after {
   opacity: 0;
 }
-
-.hamburger.open .line:nth-child(3) {
-  transform: rotate(-45deg) translate(5px, -5px);
+.header__main-nav input:checked:hover + .header__main-nav--hamburger > div {
+  transform: rotate(405deg);
 }
 
-.menu {
+.header__main-nav--menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
+  overflow: hidden;
+  display: grid;
+  place-items: center;
+}
+
+.header__main-nav--menu > div {
+  background-color: var(--color-secondary-m-dark);
+  width: 200%;
+  height: 200%;
+  display: grid;
+  place-items: center;
+  transform: scaleX(0);
+  transition: all 0.5s ease-in-out;
+}
+
+.header__main-nav--menu > div > div {
+  text-align: center;
+  max-width: 90vw;
+  max-height: 100vh;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.header__main-nav input:checked ~ .header__main-nav--menu {
+  visibility: visible;
+}
+
+.header__main-nav input:checked ~ .header__main-nav--menu > div {
+  transform: scaleX(1);
+}
+
+.header__main-nav input[type='checkbox']:checked ~ .header__main-nav--menu > div > div {
+  opacity: 1;
+}
+
+.header__main-nav--menu ul {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  gap: 24px;
 }
 
-.menu ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
+.nav-link:link,
+.nav-link:visited {
+  color: #fff;
+  font-size: calc(1.5rem + 0.5vw);
+  position: relative;
+  padding: 12px;
 }
 
-.menu li {
-  margin: 0 10px;
+.nav-link:link::before,
+.nav-link:visited::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  transform: scaleY(0);
+  z-index: -1;
+  background-color: var(--color-primary-m-dark);
+  transition: transform var(--transition-duration) ease-in-out;
 }
 
-.menu a {
-  text-decoration: none;
-  color: #000;
+.nav-link:hover::before,
+.nav-link:active::before {
+  transform: scaleY(1);
 }
 
-/* Mobile styles */
-@media (max-width: 768px) {
-  .hamburger {
-    display: block;
-  }
+.nav-link:hover {
+  color: #f19204;
+}
 
-  .menu {
-    display: none;
-    flex-direction: column;
-  }
+.nav-link:active {
+  color: #f19204;
+}
 
-  .menu.show {
-    display: flex;
-  }
-
-  .menu ul {
-    flex-direction: column;
-  }
-
-  .menu li {
-    margin: 10px 0;
-  }
+.nav-link:focus {
+  outline: none;
+  color: #f19204;
 }
