--- a/components/about/index.module.css
+++ b/components/about/index.module.css
@@ -33,3 +33,165 @@
   border-radius: inherit; /* !importanté */
   background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
 }
+
+.desc {
+  font-size: calc(1rem + 0.4vw);
+}
+
+.about {
+  padding: 3rem;
+
+  margin: 0 auto;
+}
+.title {
+  font-size: calc(1.5rem + 0.5vw);
+
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.services {
+  position: relative;
+  width: 90%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(20%, 1fr));
+  grid-template-rows: auto;
+  grid-gap: 24px;
+}
+
+.box {
+  position: relative;
+  height: auto;
+  padding: 0px;
+  background: #ffffff00;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #000;
+}
+
+.content {
+  position: relative;
+  padding: 100px 20px;
+  padding-bottom: 20px;
+  background: #060c21;
+  color: #fff;
+}
+
+.box::before {
+  content: '';
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  right: -2px;
+  bottom: -2px;
+  background: #fff;
+  transform: skew(2deg, 2deg);
+  z-index: -1;
+}
+
+.box:nth-child(1):before {
+  background: linear-gradient(315deg, #ff0057, #e64a19);
+}
+
+.box:nth-child(1):hover:before {
+  /*z-index:1;*/ /*example*/
+}
+.box:nth-child(2):before {
+  background: linear-gradient(315deg, #59a600, #008a9c);
+}
+.box:nth-child(2):hover:before {
+  background: linear-gradient(315deg, #89ff00, #00e2ff);
+}
+.box:nth-child(3):before {
+  background: linear-gradient(315deg, #e91e63, #5d02ff);
+}
+.box:nth-child(4):before {
+  background: linear-gradient(315deg, #ff0000, #ffc107);
+}
+
+.tape {
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 0, 0);
+}
+
+.tape::before {
+  position: absolute;
+  content: '';
+  width: 50%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(255, 255, 255, 0.03);
+  background: rgba(0, 0, 0, 0.1);
+  pointer-events: none;
+  transform: skew(41deg);
+  overflow: hidden;
+  transition: 0.25s;
+}
+
+.box:hover .tape::before {
+  width: 100%;
+  margin-left: 0%;
+  transform: skew(0deg);
+}
+
+.heading {
+  position: absolute;
+  top: -30px;
+  right: 20px;
+  margin: 0;
+  padding: 0;
+  font-size: 3rem;
+  color: rgba(255, 255, 255, 0.05);
+  transition: 0.25s;
+}
+
+.box:hover .content .heading {
+  top: -50px;
+  color: rgba(255, 255, 255, 0.15);
+}
+
+.box .content .name {
+  margin: 0 0 10px;
+  padding: 0;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.box .content p {
+  margin: 0;
+  padding: 0;
+  color: #dedede;
+  font-size: 16px;
+}
+
+.box .content a {
+  position: relative;
+  margin: 20px 0 0 0;
+  padding: 10px 20px;
+  text-decoration: none;
+  border: 1px solid #fff;
+  color: #fff;
+  display: inline-block;
+  transition: 0.5s;
+  visibility: hidden;
+  transform: translateY(10px);
+  opacity: 0;
+}
+
+.box:hover .content a {
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(0px);
+}
+
+.box .content a:hover {
+  background: rgba(255, 255, 255, 0.95);
+  color: #222;
+}
