--- a/components/about/index.module.css
+++ b/components/about/index.module.css
@@ -52,11 +52,11 @@
 
 .services {
   position: relative;
-  width: 90%;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(20%, 1fr));
   grid-template-rows: auto;
   grid-gap: 24px;
+  justify-content: center;
 }
 
 .box {
