--- a/components/work/index.module.css
+++ b/components/work/index.module.css
@@ -37,9 +37,11 @@
 
 .projects {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(min-content, 300px)); /* 2 columns with min and max width */
-  grid-template-rows: repeat(auto-fill, minmax(min-content, 300px)); /* 2 rows with min and max height */
+  grid-template-columns: repeat(auto-fill, minmax(min-content, 20%)); /* 2 columns with min and max width */
+  grid-template-rows: repeat(auto-fill, minmax(min-content, 20%)); /* 2 rows with min and max height */
   grid-gap: 24px;
+  justify-content: center;
+  justify-items: center;
 }
 
 .image {
