--- a/components/experience/index.module.css
+++ b/components/experience/index.module.css
@@ -1,12 +1,31 @@
+.experiences {
+  display: flex;
+  flex-direction: column;
+}
+
 .experience {
-  text-align: left;
-  color: white;
-  padding: 20px;
-  font-family: 'Times New Roman', Times, serif;
-  max-width: 70vw;
-  margin: auto;
-  margin-bottom: 40px;
-  width: 100%;
+  display: flex;
+  gap: 2rem;
+  flex-wrap: nowrap;
+  height: 300px;
+  margin-bottom: 2rem;
+}
+
+.experience-timeline {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  height: 100%;
+  width: 10px;
+}
+.experience-timeline_point {
+  margin: 0 auto;
+  height: 18%;
+}
+.experience-timeline_line {
+  height: 100%;
+  width: 3px;
 }
 
 .heading {
