--- a/components/layout/index.module.css
+++ b/components/layout/index.module.css
@@ -1,23 +1,31 @@
 .header__logo__content {
   display: grid;
-  grid-template-columns: 1fr minmax(30rem, 1fr) 1fr;
-  grid-template-rows: min-content;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: 5rem;
   justify-items: center;
   padding-top: 24px;
-  height: 5rem;
+  align-items: center;
 }
 
 .header__logo__content--logo {
-  grid-column: 2 / 3;
+  grid-column: 2/ 6;
   letter-spacing: 0.2rem;
   height: 45px;
   line-height: 45px;
+  display: flex;
+  justify-content: center;
 }
 .header__logo__content--logo span {
   color: var(--color-tertiary);
   font-size: calc(1rem + 1vw);
 }
-
+.social-login {
+  grid-column: 6/7;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 12px;
+}
 .header__logo__content--content {
   grid-column: 1 / -1;
   align-self: center;
@@ -36,4 +44,80 @@
   font-size: calc(1rem + 2vw);
   font-weight: 500;
   padding: 2vh 2rem 12px var(--font-size-title);
+}
+
+.sign-up {
+  padding: 0.4rem 1.2rem;
+  border-radius: 0.4rem;
+  font-size: 1.4rem;
+  color: white;
+  border: 1px solid rgb(233, 225, 225);
+  outline: none;
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+}
+
+.sign-up:before {
+  content: '';
+  background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing 20s linear infinite;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+.sign-up:active {
+  color: #000;
+}
+
+.sign-up:active:after {
+  background: transparent;
+}
+
+.sign-up:hover:before {
+  opacity: 1;
+}
+
+.sign-up:after {
+  z-index: -1;
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #111;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+@keyframes glowing {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.sign-in {
+  font-size: 1.4rem;
+}
+
+.sign-in:hover {
+  opacity: 0.5;
+  transition: all ease 0.3s;
 }
