--- a/components/ui/form/form.module.css
+++ b/components/ui/form/form.module.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: 0.8rem;
+  margin-bottom: 2.4rem;
+  position: relative;
 }
 
 .form input {
@@ -10,4 +12,21 @@
   border: none;
   outline: none;
   color: #232323;
+  font-size: 1.2rem;
+  height: 3.2rem;
+}
+.form label.focused {
+  top: -10px;
+  font-size: 12px;
+  color: #fff;
+}
+.form label {
+  color: #ccc;
+  font-size: 1.4rem;
+  position: absolute;
+  top: 50%;
+  left: 1rem;
+  transform: translateY(-50%);
+  transition: all 0.2s ease;
+  pointer-events: none;
 }
