--- a/pages/sign-up/sign-up.module.css
+++ b/pages/sign-up/sign-up.module.css
@@ -2,10 +2,16 @@
   display: flex;
   flex-direction: column;
   /* align-items: center; */
-  width: 35vw;
+  width: 30vw;
+  min-width: 300px;
   margin: 0 auto;
-  margin-top: 22vh;
+  margin-top: 18vh;
   background-color: #392467;
   border-radius: 0.6rem;
   padding: 2.4rem;
+}
+.singUp__form h1 {
+  margin-bottom: 2.4rem;
+  text-align: center;
+  font-size: 2rem;
 }
