--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
 @import url('css/all.css');
 
 :root {
-  color: #fff;
+  color: #232323;
   font-size: 62.5% !important;
   font-family: 'Space Mono', monospace;
   /* Colors */
