--- a/pages/sign-in/sign-in.module.css
+++ b/pages/sign-in/sign-in.module.css
@@ -2,12 +2,13 @@
   display: flex;
   flex-direction: column;
   /* align-items: center; */
-  width: 20vw;
+  /* width: 20vw; */
   margin: 0 auto;
   margin-top: 18vh;
   background-color: #392467;
   border-radius: 0.6rem;
   padding: 2.4rem;
+  min-width: 30rem;
 }
 
 .socials {
