--- a/components/ui/form/form.module.css
+++ b/components/ui/form/form.module.css
@@ -3,7 +3,11 @@
   flex-direction: column;
   gap: 0.8rem;
   margin-bottom: 2.4rem;
+}
+
+.combobox {
   position: relative;
+  width: 100%;
 }
 
 .form input {
@@ -14,6 +18,7 @@
   color: #232323;
   font-size: 1.2rem;
   height: 3.2rem;
+  width: 100%;
 }
 .form label.focused {
   top: -10px;
