--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@
   color: #232323;
   font-size: 62.5% !important;
   font-family: 'Space Mono', monospace;
+  background-color: #0d1117;
   /* Colors */
   --color-primary: #730039;
   --color-primary-m-light: hsla(330, 100%, 23%, 0.55);
