--- a/components/experience/index.module.css
+++ b/components/experience/index.module.css
@@ -1,14 +1,17 @@
 .experiences {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .experience {
   display: flex;
   gap: 2rem;
   flex-wrap: nowrap;
-  height: 300px;
+  /* height: 300px; */
   margin-bottom: 2rem;
+  max-width: 40vw;
+  width: 40vw;
 }
 
 .experience-timeline {
@@ -16,12 +19,19 @@
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-  height: 100%;
+  /* height: 100%; */
   width: 10px;
+}
+.experience-timeline_content {
+  width: 100%;
 }
 .experience-timeline_point {
   margin: 0 auto;
-  height: 18%;
+  /* height: 18%; */
+  color: white;
+}
+.experience-timeline_point i {
+  font-size: 16px;
 }
 .experience-timeline_line {
   height: 100%;
@@ -30,12 +40,13 @@
 }
 
 .heading {
-  font-size: 14px;
+  font-size: 24px;
   font-weight: normal;
   letter-spacing: 2px;
-  color: rgba(255, 255, 255, 0.6);
   margin: 0;
+  margin-bottom: 24px;
   text-transform: uppercase;
+  color: white;
 }
 
 .title {
