--- a/components/layout/index.module.css
+++ b/components/layout/index.module.css
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  padding: 12px;
 }
 
 .header__logo__content--logo {
@@ -116,4 +117,47 @@
 .sign-in:hover {
   opacity: 0.5;
   transition: all ease 0.3s;
+}
+
+.header-item {
+  color: white;
+  position: relative;
+  padding: 0.2rem 0.6rem;
+  font-size: calc(1rem + 0.66667vw);
+  text-align: center;
+}
+
+.header-item:link::before,
+.header-item:visited::before,
+.header-item:link::after,
+.header-item:visited::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 0.25rem;
+  background-color: white;
+
+  transform: scaleX(0);
+
+  transition: transform 0.6s cubic-bezier(1, 0, 0, 1);
+}
+
+.header-item:link::before,
+.header-item:visited::before {
+  top: 0;
+  transform-origin: left;
+}
+
+.header-item:link::after,
+.header-item:visited::after {
+  bottom: 0;
+  transform-origin: right;
+}
+
+.header-item:hover::before,
+.header-item:active::before,
+.header-item:hover::after,
+.header-item:active::after {
+  transform: scaleX(1);
 }
