--- a/components/layout/index.module.css
+++ b/components/layout/index.module.css
@@ -4,6 +4,7 @@
   align-items: center;
   width: 100%;
   padding: 12px;
+  height: calc(3vw + 3vh);
 }
 
 .header__logo__content--logo {
@@ -160,4 +161,18 @@
 .header-item:hover::after,
 .header-item:active::after {
   transform: scaleX(1);
+}
+
+@media (max-width: 600px) {
+  .header-item {
+    font-size: 1.6rem;
+    padding: 0.1rem 0.3rem;
+  }
+
+  .header-item:link::before,
+  .header-item:visited::before,
+  .header-item:link::after,
+  .header-item:visited::after {
+    height: 0.15rem;
+  }
 }
