--- a/components/about/index.module.css
+++ b/components/about/index.module.css
@@ -50,12 +50,14 @@
 }
 
 .services {
+  padding-top: 2rem;
   position: relative;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(20%, 1fr));
+  grid-template-columns: repeat(3, 20%);
   grid-template-rows: auto;
   grid-gap: 24px;
   justify-content: center;
+  align-items: center;
 }
 
 .box {
