--- a/styles/globals.css
+++ b/styles/globals.css
@@ -114,7 +114,7 @@ ul.header__main-nav--links {
 }
 
 ul.header__main-nav--links li {
-  padding-right: 3vw;
+  padding-right: 1vw;
 }
 
 ul.header__main-nav--links li a {
@@ -205,6 +205,7 @@ ul.header__main-nav--links li a:active::after {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    flex-direction: column-reverse;
   }
 
   ul.header__main-nav--links li {
