--- a/components/about/index.module.css
+++ b/components/about/index.module.css
@@ -209,3 +209,9 @@
 .box:hover i {
   scale: 1.5;
 }
+
+@media screen and (max-width: 768px) {
+  .services {
+    grid-template-columns: repeat(1, 45%);
+  }
+}
