--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,6 +33,34 @@
 
   /* Section Padding */
   --padding-section: 8vh 3vw;
+
+  --pointer-x: 50%;
+  --pointer-y: 50%;
+  --pointer-from-center: 0;
+  --pointer-from-top: 0.5;
+  --pointer-from-left: 0.5;
+  --card-opacity: 0;
+  --rotate-x: 0deg;
+  --rotate-y: 0deg;
+  --background-x: 50%;
+  --background-y: 50%;
+  --grain: none;
+  --icon: none;
+  --behind-gradient: none;
+  --inner-gradient: none;
+  --sunpillar-1: hsl(2, 78%, 60%);
+  --sunpillar-2: hsl(53, 81%, 48%);
+  --sunpillar-3: hsl(93, 72%, 44%);
+  --sunpillar-4: hsl(176, 85%, 36%);
+  --sunpillar-5: hsl(228, 73%, 48%);
+  --sunpillar-6: hsl(283, 85%, 63%);
+  --sunpillar-clr-1: var(--sunpillar-1);
+  --sunpillar-clr-2: var(--sunpillar-2);
+  --sunpillar-clr-3: var(--sunpillar-3);
+  --sunpillar-clr-4: var(--sunpillar-4);
+  --sunpillar-clr-5: var(--sunpillar-5);
+  --sunpillar-clr-6: var(--sunpillar-6);
+  --card-radius: 30px;
 }
 
 *,
