--- a/components/layout/index.module.css
+++ b/components/layout/index.module.css
@@ -144,10 +144,66 @@
 }
 
 .title {
+  font-size: calc(1.2rem + 0.66667vw);
   color: white;
 }
+
 .description {
+  font-size: calc(0.8rem + 0.66667vw);
   color: white;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1.2rem;
+  color: #fff;
+  background-color: #2c2f35; /* Footer background color */
+  padding: 2rem;
+  text-align: center;
+  box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.5); /* Subtle shadow above the footer */
+  width: 100%;
+  /* box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5); */
+}
+
+.footer-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2.4rem;
+  width: 100%;
+}
+
+.footer-content h2 {
+  font-size: calc(1rem + 0.66667vw);
+}
+
+.footer-content i {
+  /* font-size: calc(1rem + 0.66667vw); */
+  margin: 0;
+}
+
+.social-icon {
+  text-decoration: none;
+  color: #ffffff;
+  background-color: #424aeb; /* Button background color */
+  padding: 10px 15px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+  font-size: calc(0.8rem + 0.66667vw);
+}
+
+.social-icon:hover {
+  background-color: #357ab8; /* Darker shade on hover */
+}
+
+.footer-bottom {
+}
+
+.footer-bottom p {
+  font-size: calc(0.6rem + 0.66667vw);
 }
 
 @media (max-width: 600px) {
@@ -162,20 +218,20 @@
   .header-item:visited::after {
     height: 0.15rem;
   }
-
-  .title {
-    font-size: calc(1.2rem + 0.66667vw);
-  }
-
-  .description {
-    font-size: calc(0.8rem + 0.66667vw);
-    color: white;
-  }
 }
 
 @media (max-width: 900px) {
   .title {
     font-size: calc(1.4rem + 0.66667vw);
+  }
+  .description {
+    font-size: calc(1rem + 0.66667vw);
+  }
+}
+
+@media (min-width: 1200px) {
+  .title {
+    font-size: calc(1.6rem + 0.66667vw);
   }
   .description {
     font-size: calc(1rem + 0.66667vw);
