--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,8 @@
 :root {
   font-size: 62.5%;
   font-family: 'Space Mono', monospace;
-  background-color: #0d1117;
+  background-color: #232228;
+  transition: all ease 0.3s;
   /* Colors */
   --color-primary: #730039;
   --color-primary-m-light: hsla(330, 100%, 23%, 0.55);
@@ -120,22 +121,35 @@ ul.side-nav__content--social a i:active {
 }
 
 header#header {
-  background-color: var(--secondary-color);
+  /* background-color: var(--secondary-color); */
   height: calc(3vw + 3vh);
   z-index: 2;
+  padding: 25px;
+  text-align: center;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5); /* Header shadow */
+  border-radius: 8px; /* Optional: rounded corners */
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 999;
 }
 
 nav#header__main-nav {
   height: 100%;
+  width: 70vw;
+  margin: 0 auto;
 }
 
 ul.header__main-nav--links {
   /* just for demonstration purposes */
   /* background-color: aqua; */
   color: white;
-  width: 100%;
   height: 100%;
-
+  width: 100%;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -191,6 +205,8 @@ ul.header__main-nav--links li a:active::after {
   /*-*-*-*-**-*-*-*-**-*-*-*-**-*-*-*-* Main Nav Header *-*-*-*-**-*-*-*-**-*-*-*-**-*/
   header#header {
     position: absolute;
+    box-shadow: none;
+    background-color: transparent;
   }
 
   nav#header__main-nav.clicked {
@@ -212,8 +228,8 @@ ul.header__main-nav--links li a:active::after {
     width: 5rem;
     height: 5rem;
     position: fixed;
-    top: 2rem;
-    right: 3rem;
+    top: 1rem;
+    right: 1rem;
     cursor: pointer;
     padding: 1rem;
     border-radius: 40%;
@@ -258,7 +274,7 @@ ul.header__main-nav--links li a:active::after {
     opacity: 0;
   }
   ul.header__main-nav--links li a {
-    font-size: 24px;
+    font-size: calc(1.2rem + 0.66667vw);
     text-align: center;
   }
 
