--- a/components/about/index.module.css
+++ b/components/about/index.module.css
@@ -66,6 +66,8 @@
   justify-content: center;
   align-items: center;
   border: 1px solid #000;
+  width: 100%;
+  max-width: 25rem;
 }
 
 .content {
